--- a/JCPresley/HTML/about.html
+++ b/JCPresley/HTML/about.html
@@ -4,7 +4,7 @@
   <head>
 
     <title>JCPresley</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleabout.css" />
 
     
   </head>
@@ -13,6 +13,12 @@
 
   <body>
 
+    <div class="homeimages">
+      
+      <img src="caroline1.jpeg" />
+
+
+    </div>
 
     <div id="sidebar">
       <img class="companyimage" src="pictures/JCPresley.png" />
@@ -63,5 +69,6 @@
         </div>
       </div>
     </div>
+
   </body>
 </html>
