--- a/JCPresley/HTML/contact.html
+++ b/JCPresley/HTML/contact.html
@@ -17,20 +17,25 @@
     </div>
 
     <div class="contactsection2">
+
         <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname">
+        <input type="text" id="fname" name="fname" placeholder="first" required>
         <br><br>
-        <label for="fname">Last name:</label>
-        <input type="text" id="lname" name="lname">
+
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname" placeholder="last" required>
         <br><br>
-        <label for="fname">Phone: &nbsp&nbsp&nbsp&nbsp &nbsp </label>
-        <input type="text" id="number" name="number">
+
+        <label for="number">Phone: &nbsp&nbsp&nbsp&nbsp &nbsp </label>
+        <input type="text" id="number" name="number" placeholder="first" required>
         <br><br>
-        <label for="fname">E-Mail: &nbsp &nbsp&nbsp&nbsp  </label>
-        <input type="text" id="mail" name="mail">
+
+        <label for="mail">E-Mail: &nbsp &nbsp&nbsp&nbsp </label>
+        <input type="email" id="mail" name="mail" placeholder="E-Mail" required>
         <br><br>
-        <label for="fname">Message: &nbsp&nbsp </label>
-        <input type="text" id="message" name="message" style="width: 175px;" style="width: 175px;">
+
+        <label for="message">Message: &nbsp&nbsp </label>
+        <input type="text" id="message" name="message" style="width: 175px;" style="width: 175px;" placeholder="Inquiries here: " required>
 
         <div class="contactbuttons">
             <button>Send Email</button>
